# dashdiff

./: DESIGN.md  README.md  pyproject.toml
fixtures/: messy.json  messy_v2.json  with_row.json
src/dashdiff/: __init__.py  cli.py  console.py  diff_paths.py  grid.py  normalize.py  visual_diff.py
tests/: test_detail.py  test_diff_paths.py  test_grid.py  test_interleaved.py  test_modes.py  test_multi_badge.py  test_narrow_layout.py  test_normalize.py  test_null_stripping.py  test_palette.py  test_panel_change.py  test_panel_height.py  test_skip_unchanged_bands.py  test_visual_consistency.py  test_visual_diff.py
