[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dashdiff"
version = "0.1.22"
description = "Git diff helpers for Grafana dashboard JSON files"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["grafana", "git", "diff", "dashboard", "json"]

dependencies = ["rich>=13"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
dashdiff = "dashdiff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dashdiff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
